tests/ui/ast_statement_from_external.stderr
error[E0382]: use of moved value: `ext`
  --> tests/ui/ast_statement_from_external.rs:12:10
   |
9  |     let ext = ast::external(&loc, atom1, &body, ExternalType::Free).unwrap();
   |         --- move occurs because `ext` has type `clingo::ast::External<'_>`, which does not implement the `Copy` trait
10 |     let stmt : ast::Statement = ext.into();
   |                                     ------ `ext` moved due to this method call
11 |
12 |     drop(ext);
   |          ^^^ value used here after move
   |
note: `into` takes ownership of the receiver `self`, which moves `ext`
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn into(self) -> T;
   |             ^^^^
help: you can `clone` the value and consume it, but this might not be your desired behavior
   |
10 |     let stmt : ast::Statement = ext.clone().into();
   |                                     ++++++++
